# All-in-one-Microservice-App

./: .env.example  .gitignore  Makefile  api-tests.http  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
infrastructure/alertmanager/: alertmanager.yml
infrastructure/docker/postgres/: init.sql
infrastructure/grafana/dashboards/: microservices-overview.json
infrastructure/nginx/: nginx.conf
infrastructure/prometheus/: prometheus.yml
infrastructure/prometheus/alerts/: service_alerts.yml
services/inventory-service/: .env.example  Dockerfile  requirements.txt
services/inventory-service/app/: main.py
services/inventory-service/tests/: test_api.py
services/notification-service/: .env.example  Dockerfile  requirements.txt
services/notification-service/app/: main.py
services/notification-service/tests/: conftest.py  test_api.py
services/order-service/: Dockerfile  requirements.txt  run.py
services/payment-service/: .env.example  Dockerfile  requirements.txt
services/product-service/: Dockerfile  README.md  requirements.txt  run.py
services/user-service/: Dockerfile  PHASE3-DATABASE.md  README.md  alembic.ini  requirements.txt  run.py
shared/: setup.py
shared/cache/: __init__.py  redis_cache.py
shared/common/: config.py  exceptions.py  logging.py  security.py
shared/events/: __init__.py  publisher.py
shared/logging/: __init__.py  middleware.py  structured_logger.py
shared/metrics/: __init__.py  prometheus.py
tests/e2e/: test_order_flow.py
tests/integration/: test_service_communication.py
tests/smoke/: test_health_checks.py
(+79 files in other folders)
